--- a/stylesheet.css
+++ b/stylesheet.css
@@ -61,6 +61,11 @@ nav a:hover{
   color: #faf0ca;
 }
 
+footer a{
+  text-decoration: none;
+  color: #0D3B66;
+}
+
 .topo{
   background-image: url("./light.png");
   position: static;
@@ -86,7 +91,7 @@ nav a:hover{
   padding-top: 10%;
 }
 
-.cara h1:hover{
+.cara h1:hover, #contato .fa-linkedin{
   -webkit-box-reflect: below -10px
 	linear-gradient(to bottom, rgba(0,0,0,0.0), rgba(0,0,0,0.2));
 }
@@ -176,7 +181,7 @@ section ul{
 
 .botao_atividades{
   height: 50px;
-  width: 200px;
+  width: 280px;
   color: #FAF0CA;
   background:#0D3B66;
   border:2.5px solid #FAF0CA;
@@ -185,6 +190,7 @@ section ul{
   font-weight:bold;
 	text-decoration:none;
   cursor:pointer;
+
 }
 
 .botao_atividades:hover{
@@ -218,17 +224,28 @@ section ul{
 }
 
 .botao_contato{
-  background-color: transparent;
-  color:#FAF0CA;
-  border: 3px solid #FAF0CA;
-  border-radius: 10px;
-  height: 70px;
+  height: 50px;
   width: 200px;
-  text-decoration: none;
+  color: #0D3B66;
+  background:#FAF0CA;
+  border:2.5px solid #0D3B66;
+  border-radius:42px;
   text-align: center;
-  display: inline-block;
-  margin: 0px 3px;
+  font-weight:bold;
+  text-decoration:none;
+  cursor:pointer;
 }
+
+.botao_contato:hover{
+  color:#FAF0CA;
+  background:#0D3B66;
+  border:2.5px solid #FAF0CA;
+}
+
+#atividades{
+  padding-bottom: 1%;
+}
+
 
 #contato a{
   display: inline-block;
@@ -240,10 +257,31 @@ section ul{
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
-  min-height: 150px;
+  min-height: 190px;
+  padding-bottom: 2%;
 }
 
+#contato p{
+  color: #FAF0CA;
+}
 
+#contato p:hover{
+  text-shadow: 1px 1px 1px #003973, 3px 3px 5px #FAF0CA;
+}
+
+.fa-linkedin{
+  color:#FAF0CA;
+  border: 3px solid #FAF0CA;
+  border-radius: 5px;
+  padding: 5px;
+}
+
+.fa-linkedin:hover{
+  color:#F95738;
+  border: 3px solid #003973;
+  border-radius: 5px;
+  padding: 5px;
+}
 
 @media screen and (max-width: 1024px) {
     .topo{
@@ -259,17 +297,8 @@ section ul{
     }
 
     .botao_topo{
-      /* background-color: transparent;
-      color:#FAF0CA;
-      border: 3px solid #FAF0CA;
-      border-radius: 10px; */
-      max-height: 70px !important;
-      max-width: 100px !important;
-      /* position:relative;
-      left:36%;
-      text-decoration: none;
-      text-align: center;
-      display: inline-block; */
+      max-height: 80px !important;
+      max-width: 120px !important;
     }
 
 }
