--- a/stylesheet.css
+++ b/stylesheet.css
@@ -91,6 +91,17 @@ footer a{
   padding-top: 10%;
 }
 
+.cima{
+  padding-top: 3%;
+  color:#FAF0CA;
+  text-decoration: none;
+}
+
+.cima:hover{
+  text-shadow: 1px 1px 1px #003973, 3px 3px 5px #FAF0CA;
+  text-decoration: underline;
+}
+
 .cara h1:hover, #contato .fa-linkedin{
   -webkit-box-reflect: below -10px
 	linear-gradient(to bottom, rgba(0,0,0,0.0), rgba(0,0,0,0.2));
@@ -142,7 +153,7 @@ section ul{
 }
 
 #estudo p:hover{
-  color:#F95738;
+  text-shadow: 1px 1px 1px #003973, 3px 3px 5px #FAF0CA;
 }
 
 #quem a{
