--- a/stylesheet.css
+++ b/stylesheet.css
@@ -67,7 +67,8 @@ footer a{
 }
 
 .topo{
-  background-image: url("./light.png");
+  background-image: url("./light.jpeg");
+  text-shadow: 4px 3px 1px #000000;
   position: static;
   min-height:600px;
   padding-top: 6%;
@@ -97,14 +98,9 @@ footer a{
   text-decoration: none;
 }
 
-.cima:hover{
-  text-shadow: 1px 1px 1px #003973, 3px 3px 5px #FAF0CA;
-  text-decoration: underline;
-}
-
-.cara h1:hover, #contato .fa-linkedin{
-  -webkit-box-reflect: below -10px
-	linear-gradient(to bottom, rgba(0,0,0,0.0), rgba(0,0,0,0.2));
+#contato .fa-linkedin{
+  -webkit-box-reflect: below -3.5px
+	linear-gradient(to bottom, rgba(0,0,0,0.0), rgba(0,0,0,0.7));
 }
 
 section h2{
@@ -137,10 +133,12 @@ section ul{
   display: inline-block;
   text-align: center;
   margin: 0.5%;
+  padding-top: 1%;
 }
 
 #estudo article{
-  background-image: url("./light.png");
+  background-image: url("./light.jpeg");
+  text-shadow: 0px 3px 1px #000000;
   position: static;
   background-attachment: fixed;
   background-position: center;
@@ -169,6 +167,15 @@ section ul{
 #quem a:hover{
   text-decoration: underline;
   color: #faf0ca;
+}
+
+#trabalhos a{
+  text-decoration: underline #0D3B66;
+  color:black;
+}
+
+#trabalhos a:hover{
+  text-decoration: underline #faf0ca;
 }
 
 .button_materias{
@@ -213,7 +220,7 @@ section ul{
 .botao_topo{
   background-color: transparent;
   color:#FAF0CA;
-  border: 3px solid #FAF0CA;
+  border: 3px solid #0D3B66;
   border-radius: 10px;
   height: 70px;
   width: 200px;
@@ -221,17 +228,24 @@ section ul{
   text-align: center;
   display: inline-block;
   margin: 0px 3px;
+  font-weight: bolder;
+  font-size:15px;
+  text-shadow: 4px 3px 1px #000000;
+}
+
+.meio p{
+  text-shadow: 0px 3px 1px #000000;
 }
 
 .meio{
     display: flex;
     justify-content: center;
+
 }
 
 .botao_topo:hover{
   color:#F95738;
   border: 3px solid #F95738;
-  text-decoration: underline;
 }
 
 .botao_contato{
@@ -263,13 +277,14 @@ section ul{
 }
 
 #contato{
-  background-image: url("./light.png");
+  background-image: url("./light.jpeg");
   background-attachment: fixed;
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
   min-height: 190px;
   padding-bottom: 2%;
+
 }
 
 #contato p{
