--- a/stylesheet.css
+++ b/stylesheet.css
@@ -129,11 +129,25 @@ section ul{
   padding-bottom: 2%;
 }
 
+#estudo ul{
+  display: grid;
+  grid-template-columns: repeat(3,1fr);
+  grid-template-rows: repeat(2,1fr);
+  grid-auto-flow: row;
+  grid-auto-rows: 1fr;
+  align-content: center !important;
+  margin: 0% 0% 0% 0% !important;
+  padding: 1% 0% 1% 0%;
+}
+
 #estudo li{
-  display: inline-block;
   text-align: center;
-  margin: 0.5%;
+  list-style: none;
   padding-top: 1%;
+}
+
+#estudo img[src*="Haggai"]{
+  background-color: white;
 }
 
 #estudo article{
@@ -148,6 +162,7 @@ section ul{
 
 #estudo p {
   color:#F4D35E;
+  margin: 0% 0% 0% 0% !important;
 }
 
 #estudo p:hover{
@@ -345,7 +360,6 @@ section ul{
     .botao_topo:hover{
       text-decoration: underline;
     }
-
 }
 
 /* Chrome, Safari, and also the Edge Browser and Firefox */
