--- a/stylesheet.css
+++ b/stylesheet.css
@@ -98,6 +98,15 @@ footer a{
   text-decoration: none;
 }
 
+#projetos a{
+  text-decoration: none;
+  color: black;
+}
+
+#projetos a:hover{
+  color:#F95738;
+}
+
 #contato .fa-linkedin{
   -webkit-box-reflect: below -3.5px
 	linear-gradient(to bottom, rgba(0,0,0,0.0), rgba(0,0,0,0.7));
@@ -185,12 +194,12 @@ section ul{
 }
 
 #trabalhos a{
-  text-decoration: underline #0D3B66;
+  text-decoration: none;
   color:black;
 }
 
 #trabalhos a:hover{
-  text-decoration: underline #faf0ca;
+  color:#F95738;
 }
 
 .button_materias{
